Update license in package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "ssi"
   ],
   "author": "Hidde-Jan Jongsma",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
     "jsonwebtoken": "^8.5.1"
   },
