--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@tno/ssi-client",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A simple client for interacting with the SSI Service Provider.",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "./dist"
+    "dist"
   ],
   "scripts": {
     "build": "tsc",
